--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ h4 {
 #footer {
     border-radius: 5px;
     	height: 50px;
-    	padding-bottom: 10px;
+    	margin-bottom: 10px;
 	background-color: #668284;
 	clear: both;
 	color: #ffffff
