--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
     z-index: 1;
     position: fixed;
     border-radius: 5px;
-    width: 97.5%;
+    width: 100%;
     height: 60px;
 	background-color: #668284;
 	margin-top: -20px;
@@ -58,6 +58,7 @@ h4 {
 
 #footer {
     border-radius: 5px;
+    position: fixed;
     	height: 50px;
     	margin-bottom: 10px;
 	background-color: #668284;
