--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ h4 {
     float: left;
     border-radius: 5px;
     width: 10%;
-	position: fixed;
+	display: inline-block;
 	background-color: #B9D7D9;
 	margin-top: 50px;
 }
@@ -50,7 +50,7 @@ h4 {
     float: right;
     border-radius: 5px;
     width: 88%;
-	position: relative;
+	display: inline-block;
 	background-color: #F4EBC3;
 	margin-top: 50px;
 	margin-bottom: 10px;
