--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ h4 {
 .left {
     float: left;
     border-radius: 5px;
+    height: 400px;
     width: 10%;
 	display: inline-block;
 	background-color: #B9D7D9;
