--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     position: center,fixed;
     width: 95%;
     border-radius: 5px;
-    height: 60px;
+    height: 10em;
     background-color: #668284;
     margin-top: -20px;
     display: block;
@@ -46,7 +46,7 @@ h4 {
     width: 10%;
 	display: inline-block;
 	background-color: #B9D7D9;
-	margin-top: 50px;
+	margin-top:12em;
 }
 
 .right {
@@ -55,13 +55,13 @@ h4 {
     width: 88%;
 	display: inline-block;
 	background-color: #F4EBC3;
-	margin-top: 50px;
-	margin-bottom: 10px;
+	margin-top: 12em;
+	margin-bottom: 7em;
 }
 
 #footer {
     border-radius: 5px;
-    	height: 50px;
+    	height: 4em;
 	background-color: #668284;
 	clear: both;
 	color: #ffffff
