--- a/index.css
+++ b/index.css
@@ -1,58 +1,59 @@
 #header {
-    z-index: 1;
-    position: center,fixed;
-    width: 95%;
-    border-radius: 5px;
-    height: 4em;
-    background-color: #668284;
-    margin-top: -20px;
-    display: block;
+	z-index: 1;
+	position: center,fixed;
+	width: 95%;
+	border-radius: 5px;
+	height: 4em;
+	background-color: #668284;
+	margin-top: -20px;
+	display: block;
 }
 
 #name {
-    float:left;
-    padding-top: 4px;
-    margin-left: 10px;
-    color: #ffffff;
-    font-family: Verdana, sans-serif;
-    font-size: 20px;
+	float:left;
+	padding-top: 4px;
+	margin-left: 10px;
+	color: #ffffff;
+	font-family: Verdana, sans-serif;
+	font-size: 20px;
 }
 
 #email {
-    float:right;
-    margin-right: 10px;
-    padding-top: 11px;
-    color: #ffffff;
-    font-family: Verdana, sans-serif;
+	float:right;
+	margin-right: 10px;
+	padding-top: 11px;
+	color: #ffffff;
+	font-family: Verdana, sans-serif;
 }
 
 a {
-    Color: #000000;
-    text-decoration: none;
+	Color: #000000;
+	text-decoration: none;
 }
 
 h4 {
-    margin-left: 5px;
-    margin-bottom: 15px;
-    font-family: Verdana, sans-serif;
-    margin-top: 15px
+	margin-left: 5px;
+	margin-bottom: 15px;
+	font-family: Verdana, sans-serif;
+	margin-top: 15px
 }
 
 .left {
-    float: left;
-    position: fixed;
-    border-radius: 5px;
-    height: 375px;
-    width: 10%;
+	float: left;
+	position: fixed;
+	border-radius: 5px;
+	height: 375px;
+	width: 10%;
 	display: inline-block;
 	background-color: #B9D7D9;
 	margin-top:2em;
+	z-index: 1;
 }
 
 .right {
-    float: right;
-    border-radius: 5px;
-    width: 88%;
+	float: right;\
+	border-radius: 5px;
+	width: 88%;
 	display: inline-block;
 	background-color: #F4EBC3;
 	margin-top: 2em;
@@ -60,15 +61,17 @@ h4 {
 }
 
 #footer {
-    border-radius: 5px;
+	float: bottom;
+    	border-radius: 5px;
     	height: 2em;
 	background-color: #668284;
 	clear: both;
 	color: #ffffff
+	z-index: 1;
 }
 
 #footer p {
-    text-align: center;
-    position: relative;
-    padding-top: 10px;
+	text-align: center;
+	position: relative;
+	padding-top: 10px;
 }
