--- a/index.css
+++ b/index.css
@@ -42,21 +42,21 @@ h4 {
 	float: left;
 	position: fixed;
 	border-radius: 1em;
-	height: 75em;
+	height: 10em;
 	width: 10%;
 	display: inline-block;
 	background-color: #B9D7D9;
-	margin-top:2em;
+	margin-top:1em;
 	z-index: 1;
 }
 
 .right {
 	float: right;\
-	border-radius: 5px;
+	border-radius: 0em;
 	width: 88%;
 	display: inline-block;
 	background-color: #F4EBC3;
-	margin-top: 2em;
+	margin-top: 1em;
 	margin-bottom: 3em;
 }
 
