--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 #header {
 	z-index: 1;
 	position: center,fixed;
-	width: 98%;
-	border-radius: 5px;
+	width: 100%;
+	border-radius: 0.8em;
 	height: 4em;
 	background-color: #668284;
 	margin-top: -20px;
