--- a/index.css
+++ b/index.css
@@ -39,6 +39,10 @@ h4 {
 }
 
 .left {
+	float:left;
+	padding: .5em;
+	
+
 	float: left;
 	position: fixed;
 	border-radius: 1em;
@@ -66,6 +70,7 @@ h4 {
 	background-color: #668284;
 	clear: both;
 	color: #ffffff
+	margin-top: 1em;
 	margin-bottom: 0em;
 }
 
