Fixed semicolon after footer color.

--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ h4 {
     	height: 2em;
 	background-color: #668284;
 	clear: both;
-	color: #ffffff
+	color: #ffffff;
 	margin-top: 1em;
 	margin-bottom: 0em;
 }
